adding gr domains for qa env

--- a/letsencrypt/httpd.conf
+++ b/letsencrypt/httpd.conf
@@ -32,7 +32,13 @@ Listen 80
     Group apache
 </IfModule>
 
-ServerName $server_name
+ServerName qa.app.geniusreferrals.com
+ServerAlias qa.backend.api.geniusreferrals.com 
+ServerAlias qa.frontend.api.geniusreferrals.com 
+ServerAlias qa.gr3f.co 
+ServerAlias qa.template.geniusreferrals.com 
+ServerAlias qa.clients.geniusreferrals.com 
+
 ServerAdmin leon.sczepansky@example.org
 ServerTokens Prod
 ServerSignature Off
